Fix z-index swiper next - prev

--- a/src/components/project/styles.module.css
+++ b/src/components/project/styles.module.css
@@ -71,7 +71,7 @@
   justify-content: center;
   cursor: pointer;
   transition: all 0.5s ease-in-out;
-  z-index: 99999;
+  z-index: 20;
 }
 
 .swiper-button-next {
